--- a/smartcar/band1/band1.ioc
+++ b/smartcar/band1/band1.ioc
@@ -20,18 +20,23 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin12=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB6
+Mcu.Pin13=PB8
+Mcu.Pin14=PB9
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PD0-OSC_IN
 Mcu.Pin3=PD1-OSC_OUT
 Mcu.Pin4=PC0
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB6
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=13
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -69,10 +74,35 @@ PC0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC0.Locked=true
 PC0.PinState=GPIO_PIN_SET
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC1.GPIO_Label=OUT0
+PC1.GPIO_PuPd=GPIO_PULLDOWN
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC2.GPIO_Label=OUT1
+PC2.GPIO_PuPd=GPIO_PULLDOWN
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC3.GPIO_Label=OUT2
+PC3.GPIO_PuPd=GPIO_PULLDOWN
+PC3.Locked=true
+PC3.Signal=GPIO_Input
+PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC4.GPIO_Label=OUT3
+PC4.GPIO_PuPd=GPIO_PULLDOWN
+PC4.Locked=true
+PC4.Signal=GPIO_Input
+PC5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC5.GPIO_Label=OUT4
+PC5.GPIO_PuPd=GPIO_PULLDOWN
+PC5.Locked=true
+PC5.Signal=GPIO_Input
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -92,7 +122,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
