--- a/smartcar/band1/band1.ioc
+++ b/smartcar/band1/band1.ioc
@@ -13,30 +13,44 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM4
-Mcu.IP5=TIM6
-Mcu.IPNb=6
+Mcu.IP4=TIM2
+Mcu.IP5=TIM4
+Mcu.IP6=TIM6
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB6
-Mcu.Pin13=PB8
-Mcu.Pin14=PB9
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PC6
+Mcu.Pin15=PC7
+Mcu.Pin16=PC8
+Mcu.Pin17=PC9
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin20=PC10
+Mcu.Pin21=PC11
+Mcu.Pin22=PC12
+Mcu.Pin23=PD2
+Mcu.Pin24=PB6
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=18
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA1
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -55,10 +69,22 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=PWMAL
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=PWMBL
+PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=PWMAR
+PA2.Signal=S_TIM2_CH3
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=PWMBR
+PA3.Signal=S_TIM2_CH4
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=ECHO
 PB6.Signal=S_TIM4_CH1
@@ -79,6 +105,21 @@ PC1.GPIO_Label=OUT0
 PC1.GPIO_PuPd=GPIO_PULLDOWN
 PC1.Locked=true
 PC1.Signal=GPIO_Input
+PC10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC10.GPIO_Label=AIN1R
+PC10.GPIO_PuPd=GPIO_PULLDOWN
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC11.GPIO_Label=AIN2R
+PC11.GPIO_PuPd=GPIO_PULLDOWN
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC12.GPIO_Label=BIN1R
+PC12.GPIO_PuPd=GPIO_PULLDOWN
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -103,10 +144,35 @@ PC5.GPIO_Label=OUT4
 PC5.GPIO_PuPd=GPIO_PULLDOWN
 PC5.Locked=true
 PC5.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC6.GPIO_Label=AIN1L
+PC6.GPIO_PuPd=GPIO_PULLDOWN
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=AIN2L
+PC7.GPIO_PuPd=GPIO_PULLDOWN
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC8.GPIO_Label=BIN1L
+PC8.GPIO_PuPd=GPIO_PULLDOWN
+PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC9.GPIO_Label=BIN2L
+PC9.GPIO_PuPd=GPIO_PULLDOWN
+PC9.Locked=true
+PC9.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD2.GPIO_Label=BIN2R
+PD2.GPIO_PuPd=GPIO_PULLDOWN
+PD2.Locked=true
+PD2.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -138,7 +204,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -164,8 +230,24 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 SH.S_TIM4_CH1.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
+TIM2.Period=1000-1
+TIM2.Prescaler=72-1
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,AutoReloadPreload
@@ -177,6 +259,8 @@ TIM6.Prescaler=7200-1
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
