中断回调函数的位置放在了range.h文件里，并且时钟用的是全局变量的方式传递

--- a/smartcar/band1/band1.ioc
+++ b/smartcar/band1/band1.ioc
@@ -14,43 +14,51 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
-Mcu.IP5=TIM4
-Mcu.IP6=TIM6
-Mcu.IPNb=7
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IP8=TIM6
+Mcu.IP9=TIM7
+Mcu.IPNb=10
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA2
 Mcu.Pin11=PA3
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PC6
-Mcu.Pin15=PC7
-Mcu.Pin16=PC8
-Mcu.Pin17=PC9
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB6
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PC10
+Mcu.Pin24=PC11
+Mcu.Pin25=PC12
+Mcu.Pin26=PD2
+Mcu.Pin27=PB3
+Mcu.Pin28=PB6
+Mcu.Pin29=PB8
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=31
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -66,25 +74,44 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_Label
-PA0-WKUP.GPIO_Label=PWMAL
-PA0-WKUP.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=PWMBL
-PA1.Signal=S_TIM2_CH2
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0-WKUP.GPIO_Label=ENCODER1L
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=ENCODER2L
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Signal=S_TIM5_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=PWMAL
+PA15.Signal=S_TIM2_CH1_ETR
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=PWMAR
 PA2.Signal=S_TIM2_CH3
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=PWMBR
 PA3.Signal=S_TIM2_CH4
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=ENCODER1R
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=ENCODER2R
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Signal=S_TIM3_CH2
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=PWMBL
+PB3.Signal=S_TIM2_CH2
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=ECHO
 PB6.Signal=S_TIM4_CH1
@@ -92,9 +119,8 @@ PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC0.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PC0.GPIO_Label=TRIG
-PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PC0.GPIO_PuPd=GPIO_PULLDOWN
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC0.Locked=true
@@ -238,8 +264,16 @@ SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -248,15 +282,30 @@ TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload
 TIM2.Period=1000-1
 TIM2.Prescaler=72-1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=6
+TIM3.IC2Filter=6
+TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter,AutoReloadPreload
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,AutoReloadPreload
 TIM4.Prescaler=72-1
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IC1Filter=6
+TIM5.IC2Filter=6
+TIM5.IPParameters=EncoderMode,IC1Filter,IC2Filter,AutoReloadPreload
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,AutoReloadPreload
 TIM6.Period=10000-1
 TIM6.Prescaler=7200-1
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM7.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM7.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM7.Period=2000-1
+TIM7.Prescaler=72-1
+TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
@@ -265,4 +314,6 @@ VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
