--- a/smartcar/band1/band1.ioc
+++ b/smartcar/band1/band1.ioc
@@ -2,6 +2,17 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=USART1_TX
+Dma.RequestsNb=1
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.Instance=DMA1_Channel4
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.USART1_TX.0.MemInc=DMA_MINC_DISABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
@@ -9,17 +20,19 @@ I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F103RCT6
 Mcu.Family=STM32F1
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=TIM5
-Mcu.IP8=TIM6
-Mcu.IP9=TIM7
-Mcu.IPNb=10
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP10=TIM7
+Mcu.IP11=USART1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=TIM5
+Mcu.IP9=TIM6
+Mcu.IPNb=12
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -35,36 +48,39 @@ Mcu.Pin17=PC7
 Mcu.Pin18=PC8
 Mcu.Pin19=PC9
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PC10
-Mcu.Pin24=PC11
-Mcu.Pin25=PC12
-Mcu.Pin26=PD2
-Mcu.Pin27=PB3
-Mcu.Pin28=PB6
-Mcu.Pin29=PB8
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PA15
+Mcu.Pin25=PC10
+Mcu.Pin26=PC11
+Mcu.Pin27=PC12
+Mcu.Pin28=PD2
+Mcu.Pin29=PB3
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin30=PB6
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin4=PC0
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=36
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -79,6 +95,7 @@ NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=ENCODER1L
@@ -88,6 +105,10 @@ PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=ENCODER2L
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM5_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=RX
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -109,6 +130,10 @@ PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA7.GPIO_Label=ENCODER2R
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Signal=S_TIM3_CH2
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=TX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=PWMBL
 PB3.Signal=S_TIM2_CH2
@@ -230,7 +255,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -306,6 +331,9 @@ TIM7.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM7.Period=1000-1
 TIM7.Prescaler=720-1
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
