--- a/smartcar/band1/band1.ioc
+++ b/smartcar/band1/band1.ioc
@@ -324,8 +324,10 @@ TIM2.Prescaler=72-1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IC1Filter=6
+TIM3.IC1Polarity=TIM_ICPOLARITY_RISING
 TIM3.IC2Filter=6
-TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter,AutoReloadPreload
+TIM3.IC2Polarity=TIM_ICPOLARITY_RISING
+TIM3.IPParameters=EncoderMode,IC1Filter,IC2Filter,AutoReloadPreload,IC1Polarity,IC2Polarity
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,AutoReloadPreload
